--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -32,13 +32,13 @@ Layout/FirstHashElementIndentation:
 
 Layout/LineLength:
   Max: 90
-  IgnoredPatterns:
+  AllowedPatterns:
     - '^\s*describe\s.+\sdo$'
     - '^\s*it\s.+\sdo$'
     - '^\s*context\s.+\sdo$'
 
 Lint/AmbiguousBlockAssociation:
-  IgnoredMethods:
+  AllowedMethods:
     - not_change
 
 Lint/MissingSuper:
@@ -55,7 +55,7 @@ Style/AsciiComments:
     - features/**/*
 
 Style/BlockDelimiters:
-  IgnoredMethods: []
+  AllowedMethods: []
 
 Naming/AsciiIdentifiers:
   Exclude:
