--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Database configuration
-DATABASE_URL=postgresql://postgres_user:postgres_pass@postgres:5432/real-time-score-development
-DATABASE_NAME=real-time-score-development
+DATABASE_URL=postgresql://postgres_user:postgres_pass@postgres:5432/real-time-score
+DATABASE_NAME=real-time-score_development
 POSTGRES_USER=postgres_user
 POSTGRES_PASSWORD=postgres_pass
