--- a/config/database.yml
+++ b/config/database.yml
@@ -6,12 +6,14 @@ default: &default
 
 development:
   <<: *default
+  url: <%= ENV['DATABASE_URL'] %>_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  url: "postgresql://postgres_user:postgres_pass@postgres:5432/real-time-score-test"
+  <<: *default
+  url: <%= ENV['DATABASE_URL'] %>_test
 
 production:
   <<: *default
