feat: o arquivo newlic.yml deve ser criado na pasta config, no qual este é baseado na sua conta na newlic

--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,8 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
-
+# Ignore newrelic config
+/config/newrelic.yml
 #dotenv
 .env
 
