--- a/config/storage.yml
+++ b/config/storage.yml
@@ -3,8 +3,13 @@ test:
   root: <%= Rails.root.join("tmp/storage") %>
 
 local:
-  service: Disk
-  root: <%= Rails.root.join("storage") %>
+  service: S3
+  access_key_id: "123456"
+  secret_access_key: "123456"
+  region: ap-northeast-1
+  endpoint: http://localstack:4566
+  force_path_style: true
+  bucket: s3-local-bucket
 
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
