--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -25,17 +25,15 @@ services:
       - DEBUG=${DEBUG-}
       - PERSISTENCE=${PERSISTENCE-}
       - LAMBDA_EXECUTOR=${LAMBDA_EXECUTOR-}
-      - LOCALSTACK_API_KEY=${LOCALSTACK_API_KEY-}  # only required for Pro
       - DOCKER_HOST=unix:///var/run/docker.sock
+      - SERVICES=s3 # Lista de serviços para subir apenas o que precisamos
     volumes:
       - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
+      - "./localstack-init.sh:/docker-entrypoint-initaws.d/00-localstack-init.sh"
 
     networks:
-      - net_localstack
-
+      - localstack
 networks:
   app-net: {}
-  net_localstack:
-    external:
-      name: "localstack"
+  localstack: {}
