--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ DATABASE_URL=postgresql://postgres_user:postgres_pass@postgres:5432/real-time-sc
 DATABASE_NAME=real-time-score_development
 POSTGRES_USER=postgres_user
 POSTGRES_PASSWORD=postgres_pass
+SECRET_KEY=secret_key
