--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -47,7 +47,6 @@ services:
       - "./localstack-init.sh:/docker-entrypoint-initaws.d/00-localstack-init.sh"
 
     networks:
-      - localstack
+      - app-net
 networks:
   app-net: {}
-  localstack: {}
