fix: Localstack estava na rede incorreta.

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -33,7 +33,6 @@ services:
       - "./localstack-init.sh:/docker-entrypoint-initaws.d/00-localstack-init.sh"
 
     networks:
-      - localstack
+      - app-net
 networks:
   app-net: {}
-  localstack: {}
