Adiciona SQS como QueueAdapter do ActiveJob

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ DATABASE_NAME=real-time-score_development
 POSTGRES_USER=postgres_user
 POSTGRES_PASSWORD=postgres_pass
 SECRET_KEY=secret_key
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=123456
+AWS_SECRET_ACCESS_KEY=123456
