--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,7 +4,7 @@ volumes:
   redis: {}
 
 services:
-  app:
+  app: &app_base
     tty: true
     stdin_open: true
     env_file:
@@ -12,6 +12,18 @@ services:
     volumes:
     - ./:/app:delegated
 
+  sqs:
+    <<: *app_base
+    container_name: sqs
+    build:
+      context: .
+    depends_on:
+     - postgres
+     - localstack
+    networks:
+      - app-net
+    environment:
+      - SQS_ENABLED=true
   localstack:
     container_name: "${LOCALSTACK_DOCKER_NAME-localstack_main}"
     image: localstack/localstack
@@ -26,7 +38,8 @@ services:
       - PERSISTENCE=${PERSISTENCE-}
       - LAMBDA_EXECUTOR=${LAMBDA_EXECUTOR-}
       - DOCKER_HOST=unix:///var/run/docker.sock
-      - SERVICES=s3 # Lista de serviços para subir apenas o que precisamos
+      - SERVICES=s3,sqs # Lista de serviços para subir apenas o que precisamos
+      - SQS_ENDPOINT_STRATEGY=path
     volumes:
       - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
