--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,7 @@ volumes:
 services:
   app:
     container_name: app
-    build:
-      context: .
+    build: .
     depends_on:
      - postgres
     networks:
