--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,12 +1,12 @@
 development:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/0" } %>
-  channel_prefix: app_production
+  url: <%= ENV.fetch("REDIS_URL") %>
+  channel_prefix: app_development
 
 test:
   adapter: test
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/0" } %>
+  url: <%= ENV.fetch("REDIS_URL") %>
   channel_prefix: app_production
